# SystemIO

./: .env  README.md  pyproject.toml
backend/: main.py
backend/include/: context.py  db_query.py
frontend/: package-lock.json
